[gd_scene load_steps=7 format=3 uid="uid://cumkwgcljh42t"]

[ext_resource type="Script" uid="uid://d0xxnlkjm3gn5" path="res://MainMenu.gd" id="1_i26rj"]
[ext_resource type="Texture2D" uid="uid://w2mh8i1d0j61" path="res://Sprites/Background (1).jpg" id="2_eiy7p"]
[ext_resource type="Texture2D" uid="uid://iwy0i2avrrlg" path="res://Sprites/start (2).png" id="3_qoqlk"]
[ext_resource type="AudioStream" uid="uid://dornhsqcestf3" path="res://music/menu-button-88360.mp3" id="4_7r1g0"]
[ext_resource type="AudioStream" uid="uid://rdcr10u85oy7" path="res://music/click-button.mp3" id="4_cqjrg"]
[ext_resource type="Texture2D" uid="uid://c3p1y8ucomob1" path="res://Sprites/quit (2).png" id="4_iwfq2"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_i26rj")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -67.0
offset_top = -32.0
offset_right = 1853.0
offset_bottom = 1056.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_eiy7p")
stretch_mode = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HoverSound" type="AudioStreamPlayer2D" parent="CanvasLayer"]
position = Vector2(420, 231)
stream = ExtResource("4_7r1g0")
volume_db = -20.0

[node name="ClickSound" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("4_cqjrg")

[node name="StartButton" type="Button" parent="CanvasLayer"]
offset_left = 420.0
offset_top = 231.0
offset_right = 715.0
offset_bottom = 329.0
icon = ExtResource("3_qoqlk")

[node name="QuitButton" type="Button" parent="CanvasLayer"]
offset_left = 414.0
offset_top = 349.0
offset_right = 722.0
offset_bottom = 447.0
icon = ExtResource("4_iwfq2")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
